# netpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CppProperties.json  SocketsTest.sln  TerminalGroupChat.sln  vcpkg.json
ChatClient/: ChatClient.vcxproj  ChatClient.vcxproj.filters  client.cpp  tmp_log.txt
ChatClient/cert/: key.pem
ChatServer/: ChatServer.vcxproj  history.txt  server.cpp
ChatServer/cert/: cert.pem
ClientTest/: ClientTest.vcxproj  ClientTest.vcxproj.filters
SocketsLib/: SocketsLib.vcxproj  SocketsLib.vcxproj.filters  client.cpp  client.h  network.cpp  network.h  request.cpp  request.h  response.cpp  response.h  server.cpp  server.h  socket.h  tcp_client.cpp  tcpserver.cpp
SocketsTest/: SocketsTest.vcxproj  SocketsTest.vcxproj.filters  client.cpp  index.css  index.html  server.cpp  socket.cpp
examples/: CMakeLists.txt
examples/appsync/: CMakeLists.txt  README.md  client.cpp  common.h  server.cpp
examples/chatroom/: CMakeLists.txt  client.cpp  common.h  inputhandler.h  server.cpp
examples/webdynamic/: README.md
examples/webfetch/: CMakeLists.txt  client.cpp
examples/webstatic/: CMakeLists.txt  server.cpp
examples/webstatic/cert/: client.csr  client.key  client.p12  localhost.csr  localhost.key  rootCA.key  rootCA.srl
examples/webstatic/webdata/: index.html
netpp/: CMakeLists.txt  allocator.cpp  allocator.h  client.cpp  client.h  client_adapter.cpp  netpp.h  netpp.vcxproj  netpp.vcxproj.filters  network.cpp  network.h  protocol.cpp  protocol.h  request.cpp  request.h  response.cpp  response.h  security.cpp  security.h  server.cpp  server.h  server_adapter.cpp  sockenum.h  socket.cpp  socket.h  socket_win32.cpp
netpp/dns/: record.cpp  request.h  response.h
netpp/dtls/: cookie.cpp  cookie.h  dtls_bio.cpp  dtls_bio.h  security.cpp  security.h
netpp/http/: headers.cpp  headers.h  protocol.cpp  request.cpp  request.h  response.cpp  response.h  router.cpp  router.h
netpp/platform/: socket.cpp  socket.h
netpp/tcp/: client.cpp  client_win32.cpp  server.cpp  server_unix.cpp  server_win32.cpp  socket.cpp  socket_win32.cpp
netpp/tdp/: client_unix.cpp  client_win32.cpp  server_win32.cpp  socket_win32.cpp
netpp/tls/: controller.cpp  controller.h  proxy.cpp  proxy.h  security.cpp  security.h  socket_layer.cpp
netpp/udp/: client.cpp  client_win32.cpp  server.cpp  server_unix.cpp  server_win32.cpp  socket.cpp  socket_win32.cpp
